objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CKSW_BASE__Employee_Absence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Absence</label>
        <referenceTo>CKSW_BASE__Employee_Absence__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Shift</fullName>
                </value>
                <value>
                    <fullName>Absence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>CKSW_BASE__Service__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CKSW_BASE__Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shift</label>
        <referenceTo>CKSW_BASE__Shift__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Time_Total__c</fullName>
        <description>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</description>
        <inlineHelpText>This is the total time of all breaks taken during the service. There could be multiple breaks taken during the service.</inlineHelpText>
        <label>Total Break Time (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time_Home__c</fullName>
        <description>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</description>
        <inlineHelpText>Driving or travel time to get back to the technician&apos;s home base from the last work order location for the day or working shift.</inlineHelpText>
        <label>Travel Time Back to Home Base (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <description>Driving or travel time to this work order location from the last work order location or from the home base.</description>
        <inlineHelpText>Driving or travel time to this work order location from the last work order location or from the home base.</inlineHelpText>
        <label>Travel Time to Workorder Location (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_After__c</fullName>
        <description>Total overhead or flex time at the end of the service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time at the end of the service at the work order location.</inlineHelpText>
        <label>Overhead Time at End of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overhead_Time_Before__c</fullName>
        <description>Total overhead or flex time before the start of the actual service at the work order location.</description>
        <inlineHelpText>Total overhead or flex time before the start of the actual service at the work order location.</inlineHelpText>
        <label>Overhead Time at Start of the Job (Mins)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Duration__c</fullName>
        <description>Total service time, which is the wrench time of the service</description>
        <inlineHelpText>Total service time or the wrench time of the service.</inlineHelpText>
        <label>Service Time (in Seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__EmailHasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the linked email have Attachments?</description>
        <inlineHelpText>Does the linked email have Attachments?</inlineHelpText>
        <label>Linked email has attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>i__EmailId__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>deprecated</inlineHelpText>
        <label>EmailId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__Email__c</fullName>
        <description>ID of the iHance Email object this Task was copied from.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the iHance Email object this Task was copied from.</inlineHelpText>
        <label>Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>